Login Email e RACF OK e ajustando Controllers

--- a/back/spring/src/main/resources/application.properties
+++ b/back/spring/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
 
 # delegar para o JPA a criação das tabelas - apenas para fins de estudo, na vida real não é usado
-spring.jpa.hibernate.ddl-auto = update
+# spring.jpa.hibernate.ddl-auto = update
